--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
+    "firebase:emulators": "firebase emulators:start",
     "electron:dev": "concurrently \"npm:dev\" \"wait-on http://localhost:3000 && electron-forge start\"",
     "electron:package": "npm run build && electron-forge package",
     "electron:make": "npm run build && electron-forge make"
@@ -77,6 +78,7 @@
     "@types/wav": "^1.0.3",
     "concurrently": "^8.2.2",
     "electron": "^31.0.2",
+    "firebase-tools": "^13.11.4",
     "genkit-cli": "^1.28.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
