--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "firebase:emulators": "firebase emulators:start",
-    "electron:dev": "concurrently \"npm:dev\" \"wait-on http://localhost:3000 && electron-forge start\"",
+    "electron:dev": "concurrently \"npm:firebase:emulators\" \"npm:dev\" \"wait-on http://localhost:3000 http://localhost:4000 && electron-forge start\"",
     "electron:package": "npm run build && electron-forge package",
     "electron:make": "npm run build && electron-forge make"
   },
