--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "nextn-desktop",
+  "name": "navi-queue-pro",
   "version": "1.0.0",
   "private": true,
-  "description": "Smart Queueing System Desktop App",
+  "description": "Smart Queueing System Web App",
   "author": "Renaissance Training Center Inc.",
-  "main": "electron/main.js",
   "scripts": {
     "dev": "next dev --turbopack",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
@@ -13,10 +12,7 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "firebase:emulators": "firebase emulators:start",
-    "electron:dev": "concurrently \"npm:dev\" \"wait-on http://localhost:3000 && electron-forge start\"",
-    "electron:package": "npm run build && electron-forge package",
-    "electron:make": "npm run build && electron-forge make"
+    "firebase:emulators": "firebase emulators:start"
   },
   "dependencies": {
     "@genkit-ai/google-genai": "^1.28.0",
@@ -48,7 +44,6 @@
     "dotenv": "^16.5.0",
     "embla-carousel-autoplay": "^8.1.7",
     "embla-carousel-react": "^8.6.0",
-    "electron-is-dev": "^3.0.1",
     "firebase": "^11.9.1",
     "genkit": "^1.28.0",
     "lucide-react": "^0.475.0",
@@ -67,22 +62,14 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^7.4.0",
-    "@electron-forge/maker-deb": "^7.4.0",
-    "@electron-forge/maker-rpm": "^7.4.0",
-    "@electron-forge/maker-squirrel": "^7.4.0",
-    "@electron-forge/maker-zip": "^7.4.0",
     "@types/node": "^20",
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
     "@types/wav": "^1.0.3",
-    "concurrently": "^8.2.2",
-    "electron": "^31.0.2",
     "firebase-tools": "^13.11.4",
     "genkit-cli": "^1.28.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "wait-on": "^7.2.0"
+    "typescript": "^5"
   }
 }
