--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,27 +1,24 @@
 {
   "name": "NaviQueue Pro",
   "short_name": "NaviQueue",
-  "description": "A smart queueing system for modern service centers.",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#2C5282",
-  "theme_color": "#2C5282",
+  "description": "A smart queueing system for Renaissance Training Center Inc.",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/logo.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/maskable-icon-512x512.png",
+      "src": "/logo.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     }
-  ]
+  ],
+  "start_url": "/",
+  "scope": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#2C5282"
 }
