--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,21 +4,21 @@
   "description": "A smart queueing system for Renaissance Training Center Inc.",
   "icons": [
     {
-      "src": "/logo.png",
+      "src": "/logo-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/logo.png",
+      "src": "/logo-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ],
+  "theme_color": "#2C5282",
+  "background_color": "#FFFFFF",
   "start_url": "/",
-  "scope": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#2C5282"
+  "orientation": "portrait"
 }
