--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,21 @@
 {
   "name": "NaviQueue Pro",
   "short_name": "NaviQueue",
-  "description": "A smart queueing system for Renaissance Training Center Inc.",
+  "description": "Smart Queueing System Web App",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#FFFFFF",
+  "theme_color": "#2C5282",
   "icons": [
     {
       "src": "/logo-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "/logo-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
-  ],
-  "theme_color": "#2C5282",
-  "background_color": "#FFFFFF",
-  "start_url": "/",
-  "display": "standalone",
-  "orientation": "portrait"
+  ]
 }
