--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-autoplay": "^8.1.7",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^11.9.1",
+    "firebase": "10.12.2",
     "genkit": "^1.28.0",
     "lucide-react": "^0.475.0",
     "next": "15.5.9",
@@ -66,7 +66,7 @@
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
     "@types/wav": "^1.0.3",
-    "firebase-tools": "^13.11.4",
+    "firebase-tools": "13.14.2",
     "genkit-cli": "^1.28.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
