--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Smart Queueing System Web App",
   "author": "Renaissance Training Center Inc.",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
