--- a/firebase.json
+++ b/firebase.json
@@ -1,20 +1,11 @@
 {
-  "firestore": {
-    "rules": "firestore.rules"
-  },
-  "emulators": {
-    "auth": {
-      "port": 9099,
-      "host": "0.0.0.0"
-    },
-    "firestore": {
-      "port": 8080,
-      "host": "0.0.0.0"
-    },
-    "ui": {
-      "enabled": true,
-      "port": 4000,
-      "host": "0.0.0.0"
-    }
+  "hosting": {
+    "public": "out",
+    "cleanUrls": true,
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
