--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "firebase": "10.12.2",
     "genkit": "^1.28.0",
     "lucide-react": "^0.475.0",
-    "next": "15.5.9",
+    "next": "^14.2.0",
     "next-themes": "^0.4.6",
-    "react": "^19.2.1",
+    "react": "^18",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.2.1",
+    "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.0.0",
     "recharts": "^2.15.1",
@@ -63,8 +63,8 @@
   "devDependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
     "@types/node": "^20",
-    "@types/react": "^19.2.1",
-    "@types/react-dom": "^19.2.1",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/wav": "^1.0.3",
     "firebase-tools": "13.14.2",
     "genkit-cli": "^1.28.0",
