can we change the ip to my local subnet? 10.30.0.250/24

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "description": "Smart Queueing System Web App",
   "author": "Renaissance Training Center Inc.",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 10.30.0.250",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -H 10.30.0.250",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "firebase:emulators": "firebase emulators:start"
