--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "firebase": "10.12.2",
     "genkit": "^1.28.0",
     "lucide-react": "^0.475.0",
-    "next": "^14.2.0",
+    "next": "14.2.5",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
@@ -63,14 +63,14 @@
   },
   "devDependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
-    "@types/node": "^20",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/wav": "^1.0.3",
     "firebase-tools": "13.14.2",
     "genkit-cli": "^1.28.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.5.3"
   }
 }
