--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "navi-queue-pro",
   "version": "1.0.0",
@@ -6,11 +5,11 @@
   "description": "Smart Queueing System Web App",
   "author": "Renaissance Training Center Inc.",
   "scripts": {
-    "dev": "next dev -H 0.0.0.0",
+    "dev": "next dev",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
-    "start": "next start -H 0.0.0.0",
+    "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "firebase:emulators": "firebase emulators:start"
@@ -48,11 +47,11 @@
     "firebase": "10.12.2",
     "genkit": "^1.28.0",
     "lucide-react": "^0.475.0",
-    "next": "14.2.5",
+    "next": "15.5.9",
     "next-themes": "^0.4.6",
-    "react": "^18.2.0",
+    "react": "^19.2.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.0.0",
     "recharts": "^2.15.1",
@@ -63,14 +62,14 @@
   },
   "devDependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^20",
+    "@types/react": "^19.2.1",
+    "@types/react-dom": "^19.2.1",
     "@types/wav": "^1.0.3",
     "firebase-tools": "13.14.2",
     "genkit-cli": "^1.28.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3"
+    "typescript": "^5"
   }
 }
